Alpha 3 dump binary shaders

--- a/D3D12/D3D12.vcxproj.filters
+++ b/D3D12/D3D12.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="D3D12.rc">
