--- a/D3D12/D3D12.vcxproj
+++ b/D3D12/D3D12.vcxproj
@@ -28,6 +28,7 @@
     <None Include="d3d12.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\log.h" />
     <ClInclude Include="proxydll.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
