Adding disasssembler removing hooking to test ability to run

--- a/D3D12/D3D12.vcxproj
+++ b/D3D12/D3D12.vcxproj
@@ -22,6 +22,7 @@
     <Text Include="device12Vtbl.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\D3D_Shaders\Assembler.cpp" />
     <ClCompile Include="d3d12.cpp" />
   </ItemGroup>
   <ItemGroup>
