--- a/D3D12/D3D12.vcxproj.filters
+++ b/D3D12/D3D12.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="d3d12.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\D3D_Shaders\Assembler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="d3d12.def">
