--- a/D3D9/D3D9.vcxproj.filters
+++ b/D3D9/D3D9.vcxproj.filters
@@ -15,29 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ID3D12DeviceVtbl.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="IDXGIFactoryVtbl.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="IDXGISwapChainVtbl.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="ID3D12GraphicsCommandListVtbl.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="d3d12.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\D3D_Shaders\Assembler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="d3d12.def">
+    <None Include="proxydll.def">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
@@ -48,18 +26,13 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\log.h">
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="D3D12.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="res\FluganNet.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
+    <ClCompile Include="d3d9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
