--- a/D3D11/D3D11.vcxproj.filters
+++ b/D3D11/D3D11.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="proxy11dll.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\D3D_Shaders\Assembler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="proxy11dll.def">
