--- a/D3D_Shaders/D3D_Shaders.vcxproj.filters
+++ b/D3D_Shaders/D3D_Shaders.vcxproj.filters
@@ -31,5 +31,11 @@
     <Text Include="gamelist.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="dxil.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="test.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
