--- a/D3D11/D3D11.vcxproj
+++ b/D3D11/D3D11.vcxproj
@@ -133,7 +133,7 @@
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <ModuleDefinitionFile>proxy11dll.def</ModuleDefinitionFile>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>%(AdditionalDependencies);Nektra\NktHookLib64_Debug.lib;dxcompiler.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>dxgi.lib;%(AdditionalDependencies);Nektra\NktHookLib64_Debug.lib;dxcompiler.lib;d3dcompiler.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
